# advent-of-code

./: .gitignore  README.org
2022/: .gitignore
2022/.lsp/.cache/: db.transit.json
2022/clj/src/advent/: core.clj  day_one.clj
2022/clj/src/advent/.clj-kondo/.cache/v1/clj/: advent.core.transit.json  advent.day-one.transit.json
2022/clj/src/advent/.lsp/.cache/: db.transit.json
2022/rust/: Cargo.toml
2022/rust/src/: main.rs  reader.rs
2022/rust/src/d_two/: mod.rs
2022/rust/src/day/: i.rs  ii.rs  iii.rs  iv.rs  ix.rs  mod.rs  v.rs  vi.rs  vii.rs  viii.rs  x.rs  xi.rs  xii.rs  xiii.rs  xiv.rs  xv.rs  xvi.rs  xvii.rs  xviii.rs  xx.rs  xxi.rs  xxii.rs  xxiii.rs  xxiv.rs
2022/rust/src/lib/: core.rs  d_four.rs  d_i.rs  d_one.rs  d_two.rs  d_v.rs  d_vi.rs  mod.rs
aoc_2025/: .env  .gitignore  Dockerfile  docker-compose.yml  mix.exs
aoc_2025/lib/: client.ex  main.ex  parse_utils.ex  utils.ex
aoc_2025/lib/solvers/: day01.ex  day02.ex  day03.ex  day04.ex  day05.ex  day06.ex  day07.ex  day08.ex  day09.ex  day10.ex  day11.ex  day12.ex
aoc_2025/test/: day_template_test.exs  elixir2025_test.exs
aoc_2025/test/utils/: input_parser_test.exs
